# anvil

./: .gitignore  CMakeLists.txt  LICENSE  anvil.hpp  anvil_c.h
.github/workflows/: build.yml
capi/: anvil_c.cpp
examples/: call.cpp  complex.cpp  complex_two.cpp  hello_world.cpp  hello_world_c.c  nested.cpp
ir/: argument.hpp  basic_block.hpp  context.hpp  function.hpp  global.hpp  instruction.hpp  instruction_print.hpp  module.hpp  value.hpp
ir/constants/: aggregate.hpp  constant.hpp  constants.hpp  expr.hpp  printing.hpp  scalar.hpp  string.hpp
ir/types/: array.hpp  float.hpp  function.hpp  integer.hpp  label.hpp  pointer.hpp  struct.hpp  type.hpp  types.hpp  vector.hpp  void.hpp
irbuilder/: ir_builder.hpp
libanvil/: libanvil.cpp
